# exercicio-02

./: .gitignore  CHANGELOG.md  README.MD  comp-descomp.md  pyproject.toml  requirements.txt
output/: tclab_data_7days.csv.xz  tclab_data_float16_int8_10080min_noH.csv.xz  tclab_data_histerese_float16_int8_10080min.csv.xz
setpoints/: setpoints_7days_4h.csv  setpoints_7days_6h.csv
src/: __init__.py  analise.py  analise_web.py  compression.py  main-ch.py  main-sh.py
